--- a/web2py/applications/menuet/private/appconfig.ini
+++ b/web2py/applications/menuet/private/appconfig.ini
@@ -16,7 +16,7 @@ names = localhost:*, 127.0.0.1:*, *:*, *,scorpa.ml
 
 ; db configuration
 [db]
-uri       = mysql://root:Zaqwerty123@menuet.cwv0iod5b4w2.eu-central-1.rds.amazonaws.com/menu_db
+uri       = mysql://scorpa:Zaqwerty123@menuet.cwv0iod5b4w2.eu-central-1.rds.amazonaws.com/menu_db
 #mysql://scorpa:Lets_rule_this_world56!@93.95.97.82/menu_db
 migrate   = true
 pool_size = 20
