--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ venv.bak/
 /web2py/applications/menuet/models/0.py
 /web2py/examples/
 /web2py/applications/menuet/views/core/e_rest_.html
+/web2py/applications/menuet/private/appconfig.ini
