--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ venv.bak/
 /web2py/applications/menuet/views/core/e_rest_.html
 /web2py/applications/menuet/private/appconfig.ini
 /web2py/applications/menuet/keys/
+/web2py/applications/menuet/cache/
